--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -10,3 +10,20 @@ hugo:
   name: Hugo Example
   email: hugo@example.com
   password_digest: <%= User.digest('password') %>
+
+lana:
+  name: Lana Kane
+  email: duchess@example.gov
+  password_digest: <%= User.digest('password') %>
+
+mallory:
+  name: Mallory Archer
+  email: boss@example.gov
+  password_digest: <%= User.digest('password') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name: <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
